--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Carosello</title>
 </head>
 <body>
+    <div class="container">
+
+        <div class="carousel"> 
+            <div class="slide active"> 
+                <img src="./img/img1.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./img/img2.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./img/img3.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./img/img4.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./img/img5.jpg" alt="">
+            </div>           
+            <div class="arrows arrow-right">
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            <div class="arrows arrow-left">
+                <i class="fa-solid fa-chevron-left"></i>
+            </div>
+        </div> 
+    </div>
     
+    <script src="./main.js"></script>
 </body>
 </html>
