--- a/index.html
+++ b/index.html
@@ -10,30 +10,20 @@
 </head>
 <body>
     <div class="container">
+        <div class="slider">
+            <div class="slider-items">
+                <div class="item">
+                  <img class="item-active" src="./img/01.webp" alt="">
+                  <!-- <img class="item" src="./img/02.webp" alt=""> 
+                  <img class="item" src="./img/03.webp" alt="">
+                  <img class="item" src="./img/04.webp" alt="">
+                  <img class="item" src="./img/05.webp" alt=""> -->
+                </div>
+            </div>
 
-        <div class="carousel"> 
-            <div class="slide active"> 
-                <img src="./img/img1.jpg" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/img2.jpg" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/img3.jpg" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/img4.jpg" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/img5.jpg" alt="">
-            </div>           
-            <div class="arrows arrow-right">
-                <i class="fa-solid fa-chevron-right"></i>
-            </div>
-            <div class="arrows arrow-left">
-                <i class="fa-solid fa-chevron-left"></i>
-            </div>
-        </div> 
+          <div class="prev"><i class="fa-solid fa-chevron-up"></i></div>
+          <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
+        </div>
     </div>
     
     <script src="./main.js"></script>
