--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Carosello</title>
@@ -14,10 +13,10 @@
             <div class="slider-items">
                 <div class="item">
                   <img class="item-active" src="./img/01.webp" alt="">
-                  <!-- <img class="item" src="./img/02.webp" alt=""> 
+                  <img class="item" src="./img/02.webp" alt=""> 
                   <img class="item" src="./img/03.webp" alt="">
                   <img class="item" src="./img/04.webp" alt="">
-                  <img class="item" src="./img/05.webp" alt=""> -->
+                  <img class="item" src="./img/05.webp" alt=""> 
                 </div>
             </div>
 
