--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="slider">
             <div class="slider-items">
                 <div class="item">
-                  <img class="item-active" src="./img/01.webp" alt="">
+                  <img class="item active" src="./img/01.webp" alt="">
                   <img class="item" src="./img/02.webp" alt=""> 
                   <img class="item" src="./img/03.webp" alt="">
                   <img class="item" src="./img/04.webp" alt="">
